<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:paddingTop="@dimen/padding_small"
...
        android:id="@+id/buttonTagsAdd"
        style="@style/AppTheme.QuickActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="0dp"
        android:text="@string/posts_add_tags_add"
        android:textIsSelectable="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/textInputLayoutTags"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textInputLayoutTags"
        app:layout_constraintTop_toTopOf="parent" />

...
