...
@Composable
@PreviewAll
private fun ActiveSearchBookmarksScreenPreview() {
    ExtendedTheme {
        SearchBookmarksScreen(
            modifier = Modifier.safeDrawingPadding(),
            searchParameters = SearchParameters(tags = listOf(Tag(name = "dev"))),
            availableTags = listOf(Tag(name = "compose"), Tag(name = "ui")),
        )
    }
}
// endregion Previews

