...
                    .background(
                        shape = MaterialTheme.shapes.medium,
                        color = MaterialTheme.colorScheme.surfaceVariant,
                    )
                    .clickable(onClick = onPrivateClick)
                    .padding(all = 8.dp)
                    .testTag("private-flag"),
                contentAlignment = Alignment.Center,
            ) {
                Icon(
                    imageVector = AppIcons.Private,
                    contentDescription = null,
                    modifier = Modifier.size(16.dp),
...
                    .background(
                        shape = MaterialTheme.shapes.medium,
                        color = MaterialTheme.colorScheme.surfaceVariant,
                    )
                    .clickable(onClick = onReadLaterClick)
                    .padding(all = 8.dp)
                    .testTag("read-later-flag"),
                contentAlignment = Alignment.Center,
            ) {
                Icon(
                    imageVector = AppIcons.ReadLater,
                    contentDescription = null,
                    modifier = Modifier.size(16.dp),
...
